<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_historyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/et_patient_history" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="end|center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_patientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/et_hintName"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_historyLabel"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_patientGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_gender"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_patientName"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_patientAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_address"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_patientGender"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_patientHabits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_habits"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_patientAddress"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_presentHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_present_history"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_patientHabits"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_pastHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_past_history"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_presentHistory"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_chiefComplain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_chief_complain"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_pastHistory"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_patientDiagnosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_patientDiagnosis"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_chiefComplain"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/ll_examination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_patientDiagnosis">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/et_patient_examinations" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="end|center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_bloodPressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/et_blood_pressure"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_examination"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_temperature"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_bloodPressure"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/et_oxygenSaturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:ems="10"
            android:hint="@string/et_spo2"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_temp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/ll_treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_oxygenSaturation">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/tv_treatment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="end|center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_treatment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/et_treatment"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_treatment"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_addPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="@string/bt_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_treatment" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>