<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UpdateFragment">

    <EditText
        android:id="@+id/et_update_patientName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:ems="10"
        android:hint="@string/et_hintName"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_update_patientDiagnosis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:ems="10"
        android:hint="@string/et_patientDiagnosis"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_patientName" />

    <Button
        android:id="@+id/bt_update_patient"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:text="@string/update"
        android:textColor="@color/purple_500"
        app:layout_constraintEnd_toStartOf="@+id/bt_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_update_patientDiagnosis" />

    <Button
        android:id="@+id/bt_delete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:drawableLeft="@drawable/ic_delete"
        android:drawablePadding="2dp"
        android:drawableTint="@color/red"
        android:text="@string/bt_delete"
        android:textColor="#DD2C00"
        app:layout_constraintBottom_toBottomOf="@+id/bt_update_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_update_patient"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>