<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ViewFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_view_historyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/et_patient_history" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="end|center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_view_patientName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginTop="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_view_historyLabel"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_patientGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_patientName"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_patientAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_patientGender"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_patientHabits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_patientAddress"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_presentHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_patientHabits"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_pastHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_presentHistory"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_chiefComplain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_pastHistory"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_patientDiagnosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_chiefComplain"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/ll_view_examination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_patientDiagnosis">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/et_patient_examinations" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="end|center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_view_bloodPressure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginTop="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_view_examination"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_temp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_bloodPressure"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_view_oxygenSaturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_temp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/ll_view_treatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_oxygenSaturation">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="4dp"
                android:text="@string/tv_treatment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="end|center"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_view_treatment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:layout_marginTop="7dp"
            android:minHeight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_view_treatment"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_view_edit_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:text="@string/bt_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_view_treatment" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>